h1. CHANGELOG

h3. 1.0.19 June 4, 2014

* "require 'rails_helper'" not needed when it is include in the '.rspec' file

h3. 1.0.18 June 2, 2014

* update for RSpec 3.0

h3. 1.0.17 May 30, 2014

* add styling for forms when either Devise or OmniAuth is present

h3. 1.0.16 May 10, 2014

* add missing Devise form for password reset
* add navigation spec when Devise is used and RSpec is installed
* change "log in" to "sign in" and "logout" to "sign out"

h3. 1.0.15 May 3, 2014

* update navlinks partial to accommodate role-based authorization
* drop workaround after release of bootstrap-sass 3.1.1.1 (fixes #20)

h3. 1.0.14 April 9, 2014

* workaround for Rails 4.1.0 pending release of bootstrap-sass 3.1.1.1 (fixes #20)
* modify 'config/application.rb' for Foundation 5 (fixes #19)
* remove unnecessary conditional on Bootstrap navlinks partial (contributed by Arnel Bucio)

h3. 1.0.13 March 23, 2014

* change quote marks around 'vendor/modernizr'

h3. 1.0.12 March 23, 2014

* Rails 4.1.0 changes the application.css file
* Rails 4.1.0 changes quote marks in the application.html.erb file

h3. 1.0.11 March 8, 2014

* Foundation 5.2 no longer needs a 'span' in the navigation bar

h3. 1.0.10 February 28, 2014

* add a 'button-xs' class to the CSS styles

h3. 1.0.9 February 28, 2014

* fix wrong color for flash messages under Rails 4.1 (fixes #16)

h3. 1.0.8 February 24, 2014

* add 'name' field to Devise registration forms if 'name' is an attribute in the User object

h3. 1.0.7 February 15, 2014

* generate Devise navigation links when Devise initializer is present

h3. 1.0.6 February 13, 2014

* add OmniAuth navigation links

h3. 1.0.5 January 16, 2014

* Modernizr must be loaded before Foundation

h3. 1.0.4 January 16, 2014

* Foundation 5.0.3 is now compatible with Rails Turbolinks and the asset pipeline

h3. 1.0.3 January 11, 2014

* add missing 'autofocus' to Devise views

h3. 1.0.2 January 11, 2014
